--- a/data/index.html
+++ b/data/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Star Tracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="refresh" content="1">
   <link rel="icon" href="data:,">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
