--- a/data/index.html
+++ b/data/index.html
@@ -3,14 +3,14 @@
 <head>
   <title>Star Tracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="refresh" content="1">
   <link rel="icon" href="data:,">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="/js/jquery.js"></script>
 </head>
 <body>
   <h1>Star Tracker</h1>
-  <p>RA: <strong> %RA%</strong></p>
-  <p>DEC: <strong> %DEC%</strong></p>
+  <p>RA: <strong> <span id = "RA_span"></span></strong></p>
+  <p>DEC: <strong><span id = "DEC_span"></span></strong></p>
   <form action = "/get">
     <Strong> RA: </Strong> <input type = "text" name = "RA">
     <input class = "button" type="submit" value="Go">
@@ -19,5 +19,35 @@
     <Strong>DEC: </String> <input type = "text" name = "DEC">
     <input class = "button" type="submit" value="Go">
   </form><br>
+
+  <script>
+
+    $(function() {
+    // request data every 5 seconds
+    setInterval(requestData, 1000);
+
+    function requestData() {
+
+      // ajax request for latest sensor data
+      $.get("/motor_pos")
+        .done(function(data) {
+
+          console.log(data);  // debugging - remove when satisfied
+
+          if (data) { // if the returned data is not null, update the values
+            $("#RA_span").text(data.RA);
+            $("#DEC_span").text(data.DEC);
+          } else { // a problem occurred
+            $("#RA_span").text("?");
+            $("#DEC_span").text("?");
+          }
+        }).fail(function() {
+          console.log("The was a problem retrieving the data.");
+        });
+    }
+
+    });
+
+  </script>
 </body>
 </html>
