stop button on web page

--- a/data/index.html
+++ b/data/index.html
@@ -25,6 +25,13 @@
 
   <button type="button" class = "button" onclick="setZero()" >Set Motor Position</button>
 
+  <br>
+  <br>
+
+  <a href = "\stop">
+    <button type="button" class = "button" onclick="" >Stop</button>
+  </a>
+
   <script>
     function setZero() {
       posRA  = document.getElementById("RA_input" ).value.replaceAll("", "0")
