Add buttons to toggle motor dir

--- a/data/index.html
+++ b/data/index.html
@@ -16,10 +16,17 @@
     <input class = "button" type="submit" value="Go">
   </form><br>
   <form action = "/get">
-    <Strong>DEC: </String> <input type = "text" name = "DEC" id = "DEC_input">
+    <Strong>DEC: </Strong> <input type = "text" name = "DEC" id = "DEC_input">
     <input class = "button" type="submit" value="Go">
   </form>
-  
+
+  <br>
+  <br>
+
+  Toggle Direction: 
+  <a href = "\toggleRA"><button type="button" class = "button" >RA</button></a>
+  <a href = "\toggleDEC"><button type="button" class = "button" >DEC</button></a>
+
   <br>
   <br>
 
