--- a/data/index.html
+++ b/data/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="data:,">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="/js/jquery.js"></script>
+  <script src="js/jquery.js"></script>
+  <!-- <script src="js/jquery-ui.js"></script> -->
 </head>
 <body>
   <h1>Star Tracker</h1>
@@ -39,7 +40,49 @@
     <button type="button" class = "button" onclick="" >Stop</button>
   </a>
 
+  <br>
+  <br>
+
+  <div class="buttonGrid">
+    <div></div>
+    <button onclick="moveMotor('up');">&#8593;</button>
+    <div></div>
+    <button onclick="moveMotor('left');">&#8592;</button>
+    <div></div>
+    <button onclick="moveMotor('right');">&#8594;</button>
+    <div></div>
+    <button onclick="moveMotor('down');">&#8595;</button>
+    <div></div>  
+  </div>
+
+  <br>
+
+  <div class="btn-group">
+    <button onclick = "mag = 0.1;">0.1</button>
+    <button onclick = "mag = 1;">1</button>
+    <button onclick = "mag = 5;">5</button>
+  </div>
+
   <script>
+    var mag = 0.1
+
+    function moveMotor(Direction) {
+      if (Direction === 'up') {
+        var req = 'goDEC=' + mag
+      } else if (Direction === 'left') {
+        var req = 'goRA=-' + mag
+      } else if (Direction === 'right') {
+        var req = 'goRA=' + mag
+      } else if (Direction === 'down') {
+        var req = 'goDEC=-' + mag
+      }
+
+      getRequest = "/adjustPos?" + req
+      var xhr = new XMLHttpRequest();
+      xhr.open("GET", getRequest, true);
+      xhr.send();
+    };
+
     function setZero() {
       posRA  = document.getElementById("RA_input" ).value
       posDEC = document.getElementById("DEC_input").value
@@ -53,7 +96,6 @@
       }
 
       getRequest = "/setZero?posRA=" + posRA + "&posDEC=" +posDEC
-      console.log(getRequest)
 
       var xhr = new XMLHttpRequest();
       xhr.open("GET", getRequest, true);
