--- a/data/index.html
+++ b/data/index.html
@@ -108,7 +108,7 @@
     }
 
     $(function() {
-    // request data every 5 seconds
+    // request data every second
     setInterval(requestData, 1000);
 
     function requestData() {
